--- a/style.css
+++ b/style.css
@@ -485,6 +485,14 @@ h3 + ul {
 	margin-top: -.5em;
 }
 
+blockquote {
+	font-size: 1.5rem;
+	font-family: "Open Sans";
+	font-style: italic;
+	font-weight: 300;
+	padding: 2rem 0 1.5rem 3rem;
+}
+
 ::-moz-selection {
 	background: #000;
 	color: #fff;
@@ -1203,6 +1211,7 @@ main a.button:active {
 .content-item-categories a {
 	color: rgba(0, 0, 0, .7);
 	font-size: .7rem;
+	white-space: nowrap;
 }
 
 .content-item-categories a:hover {
